# tocs2_translator

./: README.md  build.bat  kivyExtended.kv  kivyExtended.py  main.spec  new_translator.bat  new_translator.kv  new_translator.py  openai_translate.py  pyproject.toml  setting.ini  setting.kv  spellchecker.py  test.py
backups/: r0040.27.02.2023 15-12-20.xlsx
data/icon/: Untitled.sketch
